sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: '=' expected but ';' found.
  for (i <- 1 to L-1){
^